--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,8 @@
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
         "noImplicitAny": true
-    }
+    },
+    "include": [
+        "src"
+    ]
 }
