--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "lint": "eslint '**/*.{js,ts}' --fix",
         "test": "tsc -p tsconfig.tests.json && node .test-dist/tests/dto-converter.test.js",
         "watch-demo": "browser-sync demo . --watch dist",
+        "dev": "browser-sync demo . --watch dist",
         "tsc": "tsc --emitDeclarationOnly"
     },
     "repository": {
