Update demo files and remove unused resources
- Added demo data files to .gitignore to prevent accidental inclusion in version control.
- Deleted unused files: `prompt.md`, `SWISS_LAYER_STACKING.md`, `swissData-layered.json`, and `swissData-with-standings.json` to clean up the repository.
- Updated demo HTML files to reference the new `swissData.json` for consistency in data fetching.
- Enhanced demo UI by adding Roboto font for improved typography.

These changes streamline the demo environment and ensure that only relevant files are included in the project.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ package-lock.json
 docs
 dist/*.d.ts
 .test-dist
+
+# Generated demo data files (not used in demo)
+demo/showcase-data.json
+demo/api-data.json
+demo/swissData-with-standings.json
+demo/swissData-layered.json
